--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 .banner-title {
   color: #272727;
-  padding: 100px 0px 500px 60px ;
+  padding: 100px 0px 500px 60px;
   font-size: 60px;
   font-style: normal;
   font-weight: 800;
@@ -32,29 +32,76 @@
 
 .button {
   font-size: 15px;
-  color: #ffffff;
   border: 5px solid #e55473;
   background: #e55473;
-  display: inline-flex;
-  padding: 15px 30px;
+  display: inline-block;
+  padding: 10px 25px;
   border-radius: 5px;
+  margin: 24px 3px;
+  color: #fff;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 /* Featured Flowers */
 
-.featured-flowers{
-   margin: 80px;
-   text-align: center; 
+.featured-flowers {
+  margin: 80px;
+  text-align: center;
 }
-.featured-paragraph{
-    margin: 30px;
-    text-align: center;
-    color: #27272799; 
- }
- .featured-image{
-    justify-content: center;
- }
-#PinkFlower1{
-    
-    
+.featured-paragraph {
+  margin: 30px;
+  text-align: center;
+  color: #27272799;
+}
+
+.featured-image {
+  width: 320px;
+  height: 350px;
+  border: none;
+  display: inline-block;
+  align-items: center;
+  border-radius: 150px 150px 0px 0px;
+  text-align: center;
+}
+#PinkFlower1 {
+  background-color: #a7216226;
+  margin: 4px;
+}
+#PinkFlower2 {
+  background-color: #0597a026;
+  margin: 4px;
+}
+#PinkFlower3 {
+  background-color: #477d1126;
+  margin: 4px;
+}
+#PinkFlower1 img {
+  width: 210px;
+  height: 260px;
+  padding-top: 90px;
+  padding-bottom: 50px;
+}
+#PinkFlower2 img {
+  width: 210px;
+  height: 240px;
+  padding-top: 90px;
+  padding-bottom: 70px;
+}
+#PinkFlower3 img {
+  width: 210px;
+  height: 260px;
+  padding-top: 90px;
+  padding-bottom: 50px;
+}
+.flower {
+  color: #272727;
+  margin: 90px;
+  color: #272727;
+  text-align: center;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 35px;
+  text-decoration-line: underline;
 }
