--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@
 /* Latest Deals */
 .latest-deals {
   height: 350px;
-  background-image: url("./Rectangle\ 9.png");
+  background-image: url("../Rectangle\ 9.png");
   background-size: 1010px 360px;
   background-repeat: no-repeat;
   margin-left: 210px;
