--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@
   line-height: 35px;
   text-decoration-line: underline;
 }
+
 /* Hot Deal Section */
 .hot-deal {
   display: flex;
@@ -130,7 +131,7 @@
 .discount-hot-deal {
   color: #272727;
   font-style: normal;
-  font-weight: bolder;
+  font-weight: 1000;
   line-height: normal;
   text-align: center;
   margin: 20px;
@@ -168,8 +169,12 @@
 }
 /* Instagram section */
 .instagram {
-  text-align: center;
   display: inline;
+  color: #272727;
+  text-align: center;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
 }
 .instagram-headline {
   color: #272727;
@@ -194,7 +199,7 @@
 .instagram-image img {
   margin: 0 8px;
   margin-top: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 80px;
 }
 /* Latest Deals */
 .latest-deals {
@@ -204,7 +209,7 @@
   background-repeat: no-repeat;
   margin-left: 210px;
   margin-right: 170px;
-  margin-bottom: 200px;
+  margin-bottom: 50px;
 }
 
 .email {
@@ -248,12 +253,84 @@
   line-height: normal;
   margin-left: 30px;
 }
+/* Market survey section */
+#market-survey {
+  background-color: #fff;
+  padding: 20px;
+  margin: 0 auto;
+  width: 500px;
+  border-radius: 5px;
+}
 
+.survey {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.par-surv {
+  margin: 10px;
+  color: rgba(39, 39, 39, 0.6);
+  font-family: Lato;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: center;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 10px;
+  border: 2px solid #f19797;
+  margin-bottom: 10px;
+}
+
+.submit {
+  background-color: #000;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.submit:hover {
+  background-color: #fff;
+  color: #ec6666;
+}
+button:hover {
+  background-color: #fff;
+  color: #ec6666;
+  border: none;
+}
+
+.submit :hover:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.2;
+  transition: 0.3s;
+}
+
+.question {
+  margin-bottom: 20px;
+  color: #272727;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+/* Footer section */
 footer {
   background: #111010;
   position: absolute;
   width: 100%;
-  margin-top: 150px;
+  margin-top: 100px;
   justify-content: center;
 }
 footer span {
